@@ -1,7 +1,10 @@
 /*************************************************
  * Public Constants
  *************************************************/
-
+ 
+#ifndef Pitches_h
+#define Pitches_h
+ 
 #define NOTE_B0  31
 #define NOTE_C1  33
 #define NOTE_CS1 35
@@ -91,3 +94,5 @@
 #define NOTE_CS8 4435
 #define NOTE_D8  4699
 #define NOTE_DS8 4978
+
+#endif
